--- a/client/src/components/GameDetail/GameDetail.module.css
+++ b/client/src/components/GameDetail/GameDetail.module.css
@@ -1,3 +1,39 @@
-.img {
-  
+
+.title {
+
+    max-height: 40px;
+    background-color: rgb(83,226,233,0.8);
+    color: black;
+    margin: 0rem 0.5rem 0.2rem 0.5rem;
+
+}
+.gameDetail{
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content {
+  background-color: rgb(255,255,255,0.4);
+  padding: 1rem;
+}
+.rAndP{
+  background-color: rgb(255,255,255,0.4);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+.rAndP span {
+  width: 100%;
+  border: 0.1rem solid black;
+}
+
+.rAndP ul {
+  margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+  list-style-type: none;
 }
