--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -5,17 +5,25 @@
 aside {
 
     flex:40px;
-    background-color: grey;
+    background-color: #53e2e9;
     padding: 20px;
 
 }
 
 section {
     flex:70%;
-    background-color: rgb(91, 109, 148);
+    background-color: black;
     padding: 20px;
     flex-wrap: wrap;
+    color: white;
 }
 select {
   max-width: 100px;
+}
+ .cards{
+    flex:70%;
+    background-color: black;
+    padding: 5px;
+    flex-wrap: wrap;
+    color: white;
 }
