--- a/client/src/components/Home/Nav/Nav.css
+++ b/client/src/components/Home/Nav/Nav.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    background-color: #697f9cef;
+    background-color: #53e2e9;
 }
 #controlIcon {
     margin: 0.7rem 0.7rem 0.7rem 0.7rem;
